2005-07-04  Lute Kamstra  <lute@gnu.org>

	Update FSF's address in GPL notices.

2005-07-04  Juanma Barranquero  <lekktu@gmail.com>

	* gnus.el (gnus-exit):
	* gnus-group.el (gnus-group-icons):
	* nnmail.el (nnmail-prepare): Fix typos in docstrings.

	* gnus-nocem.el (gnus-nocem):
	* message.el (message-various, message-buffers, message-sending)
	(message-interface, message-forwarding, message-insertion)
	(message-headers, message-news, message-mail):
	* pgg-gpg.el (pgg-gpg):
	* pgg-parse.el (pgg-parse):
	* pgg-pgp.el (pgg-pgp):
	* pgg-pgp5.el (pgg-pgp5):
	* pop3.el (pop3): Finish `defgroup' description with period.

2005-07-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-display-face): Improve the efficiency.
	(article-display-x-face): Ditto; remove grey x-face stuff.

2005-06-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-display-face): Correct the position in
	which Faces are inserted.

2005-06-29  Didier Verna  <didier@xemacs.org>

	* gnus-art.el (article-display-face): Display faces in correct
	order.

2005-06-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-nocem.el (gnus-nocem-verifyer): Default to pgg-verify.
	(gnus-fill-real-hashtb): Use hash table instead of obarray.
	(gnus-nocem-check-article): Fetch the Type header.
	(gnus-nocem-message-wanted-p): Fix the way to examine types.
	(gnus-nocem-verify-issuer): Use functionp instead of fboundp.
	(gnus-nocem-enter-article): Use hash tables rather than obarrays;
	make sure gnus-nocem-hashtb is initialized.
	(gnus-nocem-alist-to-hashtb): Use hash table instead of obarray.
	(gnus-nocem-unwanted-article-p): Ditto.

	* pgg.el (pgg-verify): Return the verification result.

2005-06-27  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-mime-copy-part): Check whether coding-system
	is ascii.

2005-06-24  Juanma Barranquero  <lekktu@gmail.com>

	* gnus-art.el (gnus-article-mode): Set `nobreak-char-display', not
	`show-nonbreak-escape'.
